# NLW-journey

./: benchmark.yml
axum-sqlx/: .gitignore  Cargo.toml  Dockerfile
axum-sqlx/.github/workflows/: main.yml
axum-sqlx/deploy/: values.yaml
axum-sqlx/deploy/templates/: deployment.yaml  service.yaml
axum-sqlx/k8s/: deployment.yml  secret.yml  service.yml
axum-sqlx/migrations/: 20240715224207_create_trips_table.sql  20240716015529_create_participants_table.sql  20240718165231_create_activities_and_links_tables.sql
axum-sqlx/src/: config.rs  error.rs  main.rs
axum-sqlx/src/libs/: mail.rs
axum-sqlx/src/routes/: confirm_participant.rs  confirm_trip.rs  create_activity.rs  create_invite.rs  create_link.rs  create_trip.rs  get_activities.rs  get_links.rs  get_participant.rs  get_participants.rs  get_trip_details.rs  mod.rs  ready.rs  update_trip.rs
axum-sqlx/src/tasks/: mod.rs  send_mail_task.rs
node/: package.json  pnpm-lock.yaml
node/prisma/: schema.prisma
node/src/: error-handler.ts  server.ts
node/src/routes/: confirm-participant.ts  confirm-trip.ts  create-activity.ts  create-invite.ts  create-link.ts  create-trip.ts  get-activities.ts  get-links.ts  get-participant.ts  get-participants.ts  get-trip-details.ts  update-trip.ts
react/: bun.lockb  index.html  package.json  tailwind.config.js
react-native/: app.json  package.json  pnpm-lock.yaml
react-native/src/app/: _layout.tsx  index.tsx
react-native/src/components/: button.tsx  input.tsx
react/src/: app.tsx
react/src/components/: button.tsx
react/src/pages/create-trip/: confirm-trip-modal.tsx  index.tsx  invite-guests-modal.tsx
react/src/pages/create-trip/steps/: destination-and-date-step.tsx  invite-guests-step.tsx
react/src/pages/trip-details/: activities.tsx  create-activity-modal.tsx  destination-and-date-header.tsx  guest.tsx  important-links.tsx  index.tsx
