[package]
name = "plann-er"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3 # Improves performance when developing, but slows down first compilation significantly
debug = true  # Disabled debug symbols for dependencies


[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["http2", "macros", "query"] }
chrono = { version = "0.4.38", features = ["serde", "now", "unstable-locales"] }
crossbeam = "0.8.4"
dotenvy = "0.15.7"
lettre = { version = "0.11.7", default-features = false, features = [
    "serde",
    "tokio1",
    "tracing",
    "builder",
    "smtp-transport",
    "hostname",
    "tokio1-native-tls",
] }
serde = { version = "1.0.204", features = ["derive"] }
sqlx = { version = "0.8.0", features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
    "chrono",
    "postgres",
    "uuid",
] }
thiserror = "1.0.62"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
validator = { version = "0.18.1", features = ["derive"] }
